# build_docling

./: .dockerignore  .gitignore  Dockerfile.1  Dockerfile.docling  Dockerfile.layered  Dockerfile.new  Dockerfile.slim  ex-basic.nix  examples.nix  km2306328.docling.json  layered.nix  pyproject.toml  result  uv-bin.nix
src/docling/: convert.py  download_weights.py
