[project]
name = "convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0,<3", # Using a range for semantic versioning
    "docling-core>=2.3.0",
    "docling-ibm-models>=2.0.3",
    "deepsearch-glm>=0.26.1",
    "filetype>=1.2.0",
    "pypdfium2>=4.30.0",
    "pydantic-settings>=2.3.0",
    "huggingface_hub>=0.23,<1",
    "requests>=2.32.3,<3", # Added an upper bound for semver compatibility
    "easyocr>=1.7,<2", # Added an upper bound for semver compatibility
    "tesserocr>=2.7.1", # Removed optional, handle it separately if necessary
    "docling-parse>=2.0.2",
    "certifi>=2024.7.4",
    "rtree>=1.3.0,<2", # Added an upper bound for semver compatibility
    "scipy>=1.14.1,<2", # Added an upper bound for semver compatibility
    "pyarrow>=16.1.0,<17", # Added an upper bound for semver compatibility
    "typer>=0.12.5,<0.13", # Added an upper bound for semver compatibility
    "python-docx>=1.1.2,<2", # Added an upper bound for semver compatibility
    "python-pptx>=1.0.2,<2", # Added an upper bound for semver compatibility
    "beautifulsoup4>=4.12.3,<5", # Added an upper bound for semver compatibility
    "pandas>=2.1.4,<3", # Added an upper bound for semver compatibility
    "marko>=2.1.2,<3", # Added an upper bound for semver compatibility
    "cython>=3.0.11",
    "docling>=2.7.0",
]

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docling"]
package-dir = {"" = "src"} 